--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -6,11 +6,11 @@ server.port=8080
 # =========================================
 # ORACLE DATABASE SETTINGS (Docker)
 # =========================================
-# Docker 포트 포워딩으로 확인한 1588 포트와 freepdb1 서비스 이름을 사용.
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1588/freepdb1
-spring.datasource.username=nnsoft_user
-spring.datasource.password=nnsoft_pw
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+# DATABASE
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.username=YOUR_DB_USERNAME
+spring.datasource.password=YOUR_DB_PASSWORD
 
 # =========================================
 # JPA (Java Persistance API) Settings
